# INF2004-Embed-Sys

./: README.md
IS13FinalProjectCode/: readme  spichips.csv
IS13FinalProjectCode/spi_flash/: CMakeLists.txt
IS13FinalProjectCode/spi_flash/bench/: bench.c  net.c
IS13FinalProjectCode/spi_flash/include/: analyze.h  bench.h  config.h  web_actions.h  web_output.h
IS13FinalProjectCode/spi_flash/src/: flash.c  hw_config.c  spi_flash.c
IS13FinalProjectCode/spi_flash/web/: http_server.c  web_actions.c  web_pages.c
Project/: CMakeLists.txt  analyze.c  bench.c  config.h  csvlog.c  csvlog.h  flash.c  flash.h  http_server.c  http_server.h  hw_config.h  ui.h
Project(BEN)/: CMakeLists.txt
Project(BEN)/bench/: bench.c
Project(BEN)/include/: bench.h  flash.h  ui.h  web_actions.h
Project(BEN)/src/: spi_flash.c  ui.c
Project(BEN)/web/: http_server.c  web_actions.c
Project(Ben)/: CMakeLists.txt  analyze.h  bench.c  bench.h  flash.c  flash.h  http_server.c  hw_config.c  hw_config.h  spi_flash.c  ui.c  web_actions.c  web_actions.h  web_output.c  web_pages.c
ProjectV4/bench/: analyze.c  bench.c  csvlog.c
ProjectV4/include/: config.h  hw_config.h  web_actions.h
ProjectV4/src/: spi_flash.c
ProjectV4/src/SDCard/dynamic_config_example/: CMakeLists.txt
ProjectV4/web/: web_actions.c  web_pages.c
Projectv3/bench/: bench.c
Projectv3/include/: csvlog.h  net.h  web_output.h  web_pages.h
Projectv3/src/: flash.c
Projectv3/web/: web_actions.c
SPI/: CMakeLists.txt  hw_config.c  hw_config.h  spi_flash.c
WIFI/: CMakeLists.txt  lwipopts.h  pc_to_pico.c
wifi_sd_server/: CMakeLists.txt  http_server.c  http_server.h  main.c  sd_card.c  sd_card.h
